// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hmr snowpack src/main.jsx 1`] = `
Array [
  Object {
    "type": "reload",
  },
]
`;

exports[`hmr vite src/main.jsx 1`] = `
Array [
  Object {
    "path": "/src/main.jsx",
    "type": "full-reload",
  },
]
`;
